[package]
name = "radiosonoff"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-lite = "1.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
features = [
    "Devices_Radios",
    "Foundation",
    "Foundation_Collections"
]
