[package]
name = "radiosonoff"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.3"
log = "0.4.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "Devices_Radios",
    "Foundation",
    "Foundation_Collections"
]
